DOF Number of blades wrong logic #55915

Closed
opened 2018-07-11 14:45:39 +02:00 by Roel Koster · 5 comments
Member

System Information
All platforms

Blender Version
Broken: Since dawn of time ;-)

Short description of error
Manually entering a value coming from 0, always reverts to 3

Exact steps for others to reproduce the error
Factory Defaults
Add Camera
Change Depth of Field Number of blades from default value 0 to 5
Observe Number of blades returns to 3
(when using the buttons on either side to increase the value from 0 to 5 it works, but who does that ;-)

My proposal is this:
DOFBlades.diff

Functionality:
Enter value manually or via mouse clicks: result cannot have other value than 0,3,4,5,6,...

Sidenote:
If a user decides to enter a wrong value (1 or 2) it depends on what the previous value was. If it was higher it will enter 3, if it was 0 it stays 0.

**System Information** All platforms **Blender Version** Broken: Since dawn of time ;-) **Short description of error** Manually entering a value coming from 0, always reverts to 3 **Exact steps for others to reproduce the error** Factory Defaults Add Camera Change Depth of Field Number of blades from default value 0 to 5 Observe Number of blades returns to 3 (when using the buttons on either side to increase the value from 0 to 5 it works, but who does that ;-) My proposal is this: [DOFBlades.diff](https://archive.blender.org/developer/F3913113/DOFBlades.diff) Functionality: Enter value manually or via mouse clicks: result cannot have other value than 0,3,4,5,6,... Sidenote: If a user decides to enter a wrong value (1 or 2) it depends on what the previous value was. If it was higher it will enter 3, if it was 0 it stays 0.
Author
Member

Added subscriber: @kostex

Added subscriber: @kostex

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29
Clément Foucault was assigned by Bastien Montagne 2018-07-11 14:52:18 +02:00

Patch looks good to me, assigning to @fclem since I think this is his area of code.

Patch looks good to me, assigning to @fclem since I think this is his area of code.

This issue was referenced by 78988e175a

This issue was referenced by 78988e175ae4904c043a6ca8499887b69c024c4f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55915
No description provided.