Fix T55915 DOF Number of blades wrong logic

Thanks @kostex for the fix.